# sneaker_market_maker

./: .gitignore  CONTEXT.md  README.md  alembic.ini  docker-compose.test.yml  pyproject.toml  requirements.txt
.scratch/continuous-paper-mm/: README.md  SPEC.md
.scratch/l1-readonly-market/: README.md
.scratch/model-integrated-paper/: README.md  SPEC.md
.scratch/r1-paper-transition/: README.md  ROADMAP.md  SPEC.md
.scratch/r2-offline-retrain/: README.md
.scratch/r3-ops-bind/: README.md
.scratch/r4-promotion-ux/: README.md
.superpowers/sdd/: task-10-report.md  task-9-report.md
alembic/: env.py
alembic/versions/: 20260717_01_research_subsystem.py  20260717_02_paper_mm_store.py
docs/: CODEBASE_GUIDE.md  MASTER.md  ROADMAP.md
docs/adr/: 0001-golden-historical-replay-for-v1.md  0002-deterministic-first-paper-mm.md  0003-iql-strategy-modes-gate-final.md  0005-pfhedge-paper-mode-deferred.md
docs/agents/: domain.md  issue-tracker.md
docs/compatibility/: pfhedge-0.23.0.md
docs/observe/: README.md
docs/paper-ops/: README.md  auditor-reconstructibility.md  bind-qualify-runbook.md  junior-e2e-flow.md  operator-cheat-sheet.md
docs/research/: QUANTITATIVE_CONTEXT.md  acceptance-checklist.md  advisory-qualification.md  exercise-pipeline.md  iql-code-walkthrough.md  junior-walkthrough.md  senior-architect-walkthrough.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: demo.css  main.tsx
src/sneaker_market_maker/: __init__.py  core.py  pipeline.py  simulation.py
tests/: test_core.py  test_pipeline.py  test_simulation.py
tests/acceptance/: test_acceptance_manifest.py
tests/api/: test_local_demo_swagger.py  test_paper_ops_api.py  test_paper_ops_deterministic_mode.py  test_paper_ops_export_transitions.py  test_paper_ops_r3_bind.py  test_paper_ops_r4_promote.py  test_paper_ops_set_mode_budget.py  (+2 more)
(+216 files in other folders)
