[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sneaker-market-maker"
version = "0.1.0"
description = "Fee-aware sneaker market opportunity and risk engine"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
ml = ["torch>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=sneaker_market_maker --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
