[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sneaker-market-maker"
version = "0.1.0"
description = "Fee-aware sneaker market opportunity and risk engine"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==1.26.4",
    "torch==2.2.2",
    "pfhedge==0.23.0",
    "tqdm==4.66.5",
    "safetensors==0.4.5",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",
    "httpx==0.27.2",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "hypothesis==6.115.0",
    "ruff==0.6.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=sneaker_market_maker --cov-report=term-missing"
testpaths = ["tests"]
markers = ["integration: requires an isolated external service or clean environment"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
